added responsivity and new functions to the img

--- a/site do fernando/home.htm
+++ b/site do fernando/home.htm
@@ -9,16 +9,16 @@
 
   </head>
   <body >
-    <div id="everything">
-      <div id="lateral" >
+      <div id="lateral">
         <div id="elementosLateral">
-          <img src="tulla luana.webp" alt="Eu a cores" style="width: 75%; border-radius: 50%; background-color: white; padding: 0.9%; margin-bottom: 5%; margin-top: 5%" onclick="aboutMe()"><br>
+          <img id="foto" src="tulla luana.webp" alt="Eu a cores"  onclick="myPhoto()"><br>
           <button type = "button" onclick="aboutMe()" class ="button ">Quem sou eu</button><br>
           <button type = "button" onclick = "abordagem()" class ="button ">Abordagem</button><br>
           <button class ="button" onclick = "formacion()" class = "minha-div">formação</button><br>
           <button class ="button "onclick = "contato()">Contatos</button><br>
         </div>
       </div>
+    </br>
       <div id = "texts" >
         <div id='me' class = "minha-div">
             <p><h1> Quem sou eu</h1>
