worked in some javascript and did two challengs

--- a/site do fernando/home.htm
+++ b/site do fernando/home.htm
@@ -4,8 +4,7 @@
     <link rel="stylesheet"  href="style.css">
     <title></title>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <script src="script.js">
-     </script>
+     <script src="script.js"></script>
 
   </head>
   <body >
